# AltirraSDL

./: .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  GAME_LIBRARY_DESIGN_PLAN.md  HOSTING.md  NETPLAY.md  NETPLAY_DESIGN_PLAN.md  README.md  build.sh
!test8/Altirra-4.50-test7-src/src/: Altirra.sln
!test8/Altirra-4.50-test8-src/: release.py
.claude/: settings.local.json
.github/workflows/: android.yml  bridge-package.yml  linux.yml  macos.yml  wasm.yml  windows.yml
NEW-ANDROID/: ANDROID.md
PORTING/: .AGENT_PROMPTS.md.kate-swp  AGENT_PROMPTS.md  ANDROID.md  AUDIO.md  AUDIO_TODO_LIST.txt  BUILD.md  BUILD_TODO_LIST.txt  DEBUGGER_TODO_LIST.txt  DISPLAY.md  DISPLAY_TODO_LIST.txt  INPUT.md  INPUT_TODO_LIST.txt  MAIN_LOOP.md  MAIN_LOOP_TODO_LIST.txt  NETWORK_TODO_LIST.txt  NEW_FEATURES_IDEAS.md  OVERVIEW.md  SYSTEM.md  SYSTEM_TODO_LIST.txt  UI.md  UI_COVERAGE_REPORT.md  UI_TODO_LIST.txt  verify_ui_coverage.py
PORTING/VERIFICATION/: 01_boot_load.md  02_system_reset.md  03_hardware_config.md  04_video_display.md  05_audio.md  05_audio_mixer_internals.md  06_input.md  07_disk.md  08_cassette.md  09_cartridge.md  10_devices.md  11_recording.md  12_profiles_settings.md  13_debug_tools.md  14_window_view.md  README.md
ROMS/: 1050 Turbo II V3.4.ROM {55DFC9AC}  1050 Turbo II V3.5.ROM {4A69312B}  1400XL V&T handler firmware (unknown v1).ROM {2BA701DF}  1400XL V&T handler firmware (unknown v2).ROM {5EC3EC7D}  1450XLD disk handler firmware (rev. E).ROM {E8F9C8A7}  810 Turbo firmware V1.2.ROM {0126A511}  ATR8000 firmware ver 3.02.ROM {739BAB74}  Astra 1001_1620 (based on Percom RFD V1.10).ROM {2AB65122}  Atari 1025 firmware.ROM {46D194B4}  Atari 1029 firmware (English).ROM {19C4F811}  Atari 1030 external ROM firmware.ROM {7ABDB8E7}  Atari 1030 internal 8050 firmware.ROM {329B1D5B}  Atari 1050 firmware rev. E.ROM {F9A7AFB2}  Atari 1050 firmware rev. H.ROM {6D9D589B}  Atari 1050 firmware rev. J.ROM {91BA303D}  Atari 1050 firmware rev. L.ROM {FB4B8757}  Atari 1090 80-column firmware rev. 9.ROM {87809326}  Atari 400_800 OS-B PAL.ROM {0C913DFC}  Atari 810 firmware rev. B.ROM {19227D33}  Atari 810 firmware rev. E.ROM {AAD220F4}  Atari 815 firmware.ROM {1527D542}  Atari 820 firmware.ROM {79E0FEA4}  Atari 835 internal 8048 firmware.ROM {D6DD4F41}  Atari 850 firmware (early revision).ROM {9201359A}  Atari 850 firmware.ROM {2CF990B9}  Bit 3 Full-View 80 charset (4K overdump).ROM {A4534CEA}  Bit 3 Full-View 80 charset.ROM {738C6AC1}  Bit 3 Full-View 80 firmware.ROM {B9D576DA}  Black Box Floppy Board v1.ROM {769CC316}  Black Box ver. 1.34.ROM {A8953874}  Black Box ver. 1.41.ROM {91175314}  Black Box ver. 2.16.ROM {7CAFD9A8}  Happy 1050 firmware rev. 1.ROM {19B6BFE5}  Happy 1050 firmware rev. 2.ROM {F76EAE16}  Happy 810 firmware (pre-v7 serial $1704; 4K non-original).ROM {143B8538}  Happy 810 firmware (pre-v7 serial $4490; 4K original).ROM {942EC3D5}  Happy 810 firmware (pre-v7 serial $4B9B; 3K functional-only).ROM {F81B69CB}  Happy 810 firmware (v7, 6K functional ROM).ROM {9CC7A207}  Happy 810 firmware (v7, 6K functional ROM, modified).ROM {371F6973}  Happy 810 firmware (v7, 8K full ROM).ROM {982D825D}  (+23 more)
android/: build.gradle  gradle.properties  settings.gradle  setup_sdl3.sh
android/app/: build.gradle  debug.keystore
docs/: netplay-nat.md
scripts/: altirra-macos-dev.sh
server/lobby/: CMakeLists.txt  Caddyfile.example  README.md  altirra-lobby.service  journald-altirra-lobby.conf  server.cpp  server_test.cpp
src/ATAppBase/source/: crthooks.cpp  outputdebugstringfilter.cpp
src/ATAudio/source/: audiooutput.cpp  audiooutput_sdl3.cpp  audiooutxa2.cpp  pokey.cpp  pokeysavestate.cpp
src/ATIO/: CMakeLists.txt
src/ATIO/source/: audioreaderflac.cpp  audioreaderflac_arm64.cpp  audioreaderflac_x86.cpp  cartridgeimage.cpp  cassetteblock.cpp  cassettedecoder.cpp  vorbismisc.cpp
src/Altirra/: Altirra.vcxproj
src/AltirraBridgeServer/: CMakeLists.txt
src/AltirraSDL/: CMakeLists.txt
src/AltirraSDL/AltirraBridge/sdk/c/examples/: 01_ping.c  02_peek_regs.c  CMakeLists.txt
src/AltirraSDL/AltirraBridge/sdk/python/: README.md  pyproject.toml
src/AltirraSDL/AltirraBridge/sdk/python/altirra_bridge/: __init__.py  client.py  project.py
src/AltirraSDL/AltirraBridge/sdk/python/altirra_bridge/asm_writer/: code.py  emit.py
src/AltirraSDL/AltirraBridge/sdk/python/examples/: 01_hello.py  02_state_dump.py
src/Kasumi/: CMakeLists.txt
src/compat/: intrin.h
src/system/: CMakeLists.txt
syncing-with-upstream/: HISTORY.md
(+534 files in other folders)
