[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "altirra_bridge"
version = "0.1.0"
description = "Python client for the AltirraBridge scripting protocol (Altirra Atari 8-bit emulator)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-2.0-or-later"}
authors = [
    {name = "Altirra contributors"},
]
keywords = ["atari", "altirra", "emulator", "8-bit", "automation", "reverse-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Emulators",
]
# No runtime dependencies — pure stdlib (socket, json).
dependencies = []

[project.urls]
Homepage = "https://github.com/anthropics/AltirraSDL"

[tool.setuptools.packages.find]
include = ["altirra_bridge*"]
exclude = ["examples*"]
